@@ -1,10 +1,15 @@
 netcfg (0.55) UNRELEASED; urgency=low
 
+  * Bastian Blank
+    - Use inet_pton and inet_ntop. Why must people always write its own
+      instead of using well tested default functions?
+    - Only recalculate gateway if ipaddress or netmask is changed.
+    - Never recalculate nameserver.
   * Translations:
     - Kęstutis Biliūnas: Updated Lithuanian translation (lt.po)
     - Jordi Mallach: Updated Catalan translation (ca.po)
 
- -- Kęstutis Biliūnas <kebil@kaunas.init.lt>  Thu, 11 Mar 2004 15:17:14 +0200
+ -- Bastian Blank <waldi@debian.org>  Thu, 11 Mar 2004 21:19:37 +0100
 
 netcfg (0.54) unstable; urgency=low
 
